--- a/resources/styles.css
+++ b/resources/styles.css
@@ -30,10 +30,10 @@ table tr:first-child {
 
 }
 
-.datatable tr.net:nth-child(8n-1){
+.datatable tr.net:nth-of-type(2n){
 	background-color: #bbb;
 }
-.datatable tr.net:nth-child(8n+3){
+.datatable tr.net:nth-of-type(2n+1){
 	background-color: #ccc;
 }
 
